--- a/BarreraBorlayDuarte.Rmd
+++ b/BarreraBorlayDuarte.Rmd
@@ -1,20 +1,37 @@
+---
+title: "TP1 Modelo Lineal"
+author: "Gonzalo Barrera Borla y Octavio Martín Duarte "
+date: "5 de Junio de 2019"
+output:
+  pdf_document:
+  latex_engine: xelatex
+  html_document: default
+---
+
+# Preámbulos y Parámetros
+
+## Preámbulos
+
+Cargamos las herramientas que vamos a usar y fijamos la semilla 42 para garantizar el mismo proceso pseudo aleatorio en todas las sucesivas ejecuciones. 
+
+```{r Carga de Liberías y Datos}
 library('tidyverse')
 library('stats')
-library('future')
-library('furrr')
 set.seed(42)
+```
 
-# Coeficientes "platonicos" (i.e., del proceso generador de datos)
+## Parámetros
+
+  Para darle reutilizabilidad a nuestro trabajo definimos todos los procedimientos como funciones. Acá están los parámetros que permitirían realizar una simulación parecida cambiando por ejemplo el proceso generador de datos o la distribución del error $\varepsilon$.
+
+```{r Parámetros de esta Simulación}
 beta_pgd <- c(4, 2, -3, 0.5, 0)
-
-# Funciones generadoras de x_i
 generadores_x <- list(
     "x1" = function(n) { runif(n, min=-5, max=5) },
     "x2" = function(n) { runif(n, min=-5, max=5) },
     "x3" = function(n) { runif(n, min=-5, max=5) },
     "x4" = function(n) { runif(n, min=-5, max=5) }
 )
-
 generadores_eps <- list(
   "normal" = function(n) { rnorm(n) },
   "exponencial" = function(n) { rexp(n, rate = 1/2) - 2 },
@@ -24,11 +41,17 @@ generadores_eps <- list(
   "student1" = function(n) { rt(n, 1) },
   "student3" = function(n) { rt(n, 3) }
 )
-
 generador_y <- function(x1, x2, x3, x4, beta_pgd, eps, ...)   {
   c(1, x1, x2, x3, x4) %*% beta_pgd + eps
 }
+#El valor de B en la consigna:
+n_sims <- 1000
+```
 
+  Vamos a comparar coeficientes estimados por diversos métodos con los de un proceso generador de datos conocido, de coeficientes $\mathbb{\beta} =$`r beta_pgd`.
+  Optamos por generar todas las simulaciones una única vez y tomar submuestras 
+
+```{r Generar Muestra}
 generar_muestra <- function(n, generadores_x, generador_eps, beta_pgd) {
   # Tibble vacio
   df <- tibble(.rows = n)
@@ -75,37 +98,23 @@ ayudante_generar_muestra <- function(distr_eps, generadores_x, beta_pgd, n) {
 
 }
 
-#Pasamos a modo multihilo porque se vienen cálculos feos
-
-plan(multiprocess)
-future.globals.maxSize = '+inf'
-
-
-#n_muestrales <- c(10, 25, 100)
-n_muestrales <- c(10, 25, 100, 250, 500, 1000, 1500, 2000, 3000)
+n_muestrales <- c(10, 25, 100)
 max_n_muestral <- max(n_muestrales)
-n_sims <- 1000
 muestras_maestras <- crossing(
   n_sim = seq(max_n_muestral),
   distr_eps = names(generadores_eps)) %>%
   mutate(
-    muestra = future_map(distr_eps,
+    muestra = map(distr_eps
                   ayudante_generar_muestra,
-                  generadores_x = generadores_x,
-                  beta_pgd = beta_pgd,
-                  n = max_n_muestral)
+                  generadores_x = generadores_x, beta_pgd = beta_pgd, n = max_n_muestral)
   )
-
-muestras_maestras %>% write_rds("muestras_maestras.Rds")
 
 muestras_puntuales <- muestras_maestras %>%
   crossing(n = n_muestrales) %>%
   mutate(
-    muestra = future_map2(muestra, n, head),
-    llamada_lm = future_map(muestra, ~lm(y ~ x1 + x2 + x3 +x4, data = .))
+    muestra = map2(muestra, n, head),
+    llamada_lm = map(muestra, ~lm(y ~ x1 + x2 + x3 +x4, data = .))
   )
-
-muestras_puntuales %>% write_rds("muestras_puntuales.Rds")
 
 ayudante_intervalo_conf <- function(fun_a, llamada_lm, met_int, alfa) {
   intervalo_conf(a_vec = funciones_a[[fun_a]], llamada_lm, metodo = met_int, alfa)
@@ -124,22 +133,19 @@ intervalos <- muestras_puntuales %>%
     fun_a = names(funciones_a),
     met_int = metodos_intervalo) %>%
   mutate(
-    #atbeta es el valor del parámetro en el PGD. 
+    #atbeta es el valor del parámetro en el PGD.
     atbeta = map_dbl(fun_a, function(i) funciones_a[[i]] %*% beta_pgd),
-    ic = future_pmap(
+    ic = pmap(
       list(fun_a, llamada_lm, met_int),
       ayudante_intervalo_conf,
       alfa = alfa),
-    cubre = future_map2_lgl(ic, atbeta, cubre),
-    ic_low = future_map_dbl(ic, 1),
-    ic_upp = future_map_dbl(ic, 2)
-    )
-
-# Guardamos la simulación
-
-intervalos %>% write_rds("simulacion.csv")
+    cubre = map2_lgl(ic, atbeta, cubre),
+    ic_low = map_dbl(ic, 1),
+    ic_upp = map_dbl(ic, 2)
+  )
+```
 
 # Esto lo hice para probar que diera algo. Y da!
-sintesis <- intervalos %>%
+intervalos %>%
   group_by(distr_eps, n, met_int, fun_a) %>%
-  summarise(prop_cubre = mean(cubre)) %>% write_rds("sintesis-resultados.csv")
+  summarise(prop_cubre = mean(cubre)) %>% write_csv("sintesis-resultados.csv")
